# IGDB-EtLT

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
src/configs/: configs.py
src/raw/libs/: igdb_api.py  session_handler.py
