[tool.poetry]
name = "igdb-etlt"
version = "0.1.0"
description = ""
authors = ["felipedmnq-artefact <felipe.vasconcelos@artefact.com>"]
readme = "README.md"
packages = [{include = "igdb_etlt"}]

[tool.poetry.dependencies]
python = "^3.10"
pre-commit = "^3.3.3"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
